--- a/css/index_v/style.css
+++ b/css/index_v/style.css
@@ -2022,3 +2022,86 @@ hr {
 a:hover{
     color: #d62e2f !important;
 }
+
+
+#blogs p {
+    letter-spacing: 0.5px;
+    font-size: 13px;
+    line-height: 34px;
+    font-weight: 300;
+}
+
+#blogs img {
+    width: 100%;
+}
+
+#blogs a {
+    color: #2f2f2f;
+    text-decoration: none;
+    transition: ease .6s;
+    -webkit-transition: ease .6s;
+    -moz-transition: ease .6s;
+    -o-transition: ease .6s;
+    -ms-transition: ease .6s;
+}
+
+#blogs .grid {
+    height: 520px;
+}
+
+#blogs .grid-item {
+    width: 33.333%;
+    float: left;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    #blogs .grid-item {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 480px) {
+    #blogs .grid-item {
+        width: 100% !important;
+        padding: 0;
+    }
+}
+
+#blogs .grid-item .wrap-article {
+    border: 1px solid rgba(129, 129, 129, 0.1);
+    background: #ffffff;
+    padding: 30px 20px;
+}
+
+#blogs .grid-item .wrap-article .img-circle {
+    width: 133px;
+    height: 133px;
+}
+
+#blogs .grid-item .wrap-article img {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+
+#blogs .grid-item .wrap-article .title{
+    text-align: center;
+}
+
+#blogs .grid-item .wrap-article .fancy {
+    line-height: 0.5;
+    text-align: center;
+    font-size: 16px;
+    margin-top: 40px;
+    color: #818181;
+}
+
+#blogs .grid-item .wrap-article .content-blog {
+    margin-top: 30px;
+    padding: 0 10px 0 10px;
+    text-align: justify;
+    color: #5f5f5f;
+}
